# DSA-Solver-Agentic-Engine-using-Autogen

./: backend.py  backend_enhanced.py  main.py  pyproject.toml  requirements.txt
0. Autogen Basics/: example.py  team_example.py
AlgoGenie/: app.py  main.py
AlgoGenie/agents/: code_executor_agent.py  problem_solver_agent.py
AlgoGenie/config/: constant.py  docker_executor.py  docker_utils.py  settings.py
AlgoGenie/teams/: DSA_team.py
AlgoGenie/temp/: solution.py  tmp_code_06a3a2391736a67d0ac963a99b2a60a798ceb3ccc77f1fc26cc524cb104753eb.python  tmp_code_0e17d0fc57ba5dbfa759257ee1bcf696ae3562ab1519026dd8108e1c168a5732.python  tmp_code_0f317a512698af56a3d34c320c0666d6edb3475b297fe3a0cbb7d3d2696e9fa1.python  tmp_code_0f517ee565135059037383d0b8c8a5cebe0b6865ccbdefd7c618ef921f2de346.python  tmp_code_231b421ec92b92615d0b12899965e450cd86fb6d2487b875f0020591a05ed040.python  tmp_code_3ea2c11f6b90d6d398061fab67f994f3c505df616553f74fa40d0670c52485c2.python  tmp_code_3f73d892179748ee549a9831abc12115673a0c97e1555d5d0bc3a75027ef1d99.python  tmp_code_4041f82a3b11e2cf23dcaaf7ff99cb686091c5c6d9893150592703fce983fdb1.python  tmp_code_40e1fd90557a594bbad52850fe70e24e05c6364fb59f78b5b9359c0b9c19d48f.python  tmp_code_44a16c13ff003649939e47bde8d471b222ded56b7cb3e647af1e3334727d3d69.python  tmp_code_48cf3ae1ffcdddb3471d434b9883e90df3b0df1ad7c5bab20d03699151e3008f.python  tmp_code_498c8b093151bdd91623415ebf896df0f62ee7fe905dcaca9f856470000a0285.python  tmp_code_79d9bbc5564910a6d56e1d795d1211ea2edbbad7e4eeaf70703068cbc14f8057.python  (+15 more)
Project_Unstructured/: backend.py  backend_enhanced.py
(+1 files in other folders)
